--- a/app/src/main/res/layout/activity_other_game.xml
+++ b/app/src/main/res/layout/activity_other_game.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".OtherGameActivity">
 
     <TextView
         android:id="@+id/helloWorldTextView"
@@ -10,6 +13,4 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:text="Hello World"/>
-
-
-</RelativeLayout>
+</FrameLayout>
