--- a/app/src/main/res/layout/activity_other_game.xml
+++ b/app/src/main/res/layout/activity_other_game.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OtherGameActivity">
+    tools:context=".gameFragments.OtherGameFragment">
 
     <TextView
         android:id="@+id/helloWorldTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="Hello World"/>
-</FrameLayout>
+        android:layout_centerVertical="true"
+        android:text="Hello World" />
+
+</RelativeLayout>
