--- a/app/src/main/res/layout/activity_guess_game.xml
+++ b/app/src/main/res/layout/activity_guess_game.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".gameFragments.GuessGameFragment">
 
     <TextView
         android:id="@+id/randomNumbersTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="56dp"
+        android:layout_centerHorizontal="true"/>
 
     <EditText
         android:id="@+id/guessEditText"
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:hint="Enter your guess"
-        android:inputType="number" />
+        android:inputType="number"/>
 
     <Button
         android:id="@+id/submitGuessButton"
@@ -30,6 +30,6 @@
         android:layout_below="@+id/guessEditText"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:text="Submit" />
+        android:text="Submit"/>
 
 </RelativeLayout>
