Game works with result screen at the end.

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -24,4 +24,9 @@
         android:name="com.example.licenseplatequiz.gameFragments.OtherGameFragment"
         android:label="Guess Game" />
 
+    <fragment
+        android:id="@+id/resultsFragment"
+        android:name="com.example.licenseplatequiz.gameFragments.ResultsFragment"
+        android:label="Results Screen" />
+
 </navigation>
