--- a/app/src/main/res/layout/activity_guess_game.xml
+++ b/app/src/main/res/layout/activity_guess_game.xml
@@ -32,4 +32,16 @@
         android:layout_marginTop="16dp"
         android:text="Submit"/>
 
+    <TextView
+        android:id="@+id/resultTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Correct!"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/submitGuessButton"
+
+        />
+
+
 </RelativeLayout>
