--- a/app/src/main/res/layout/activity_configure_game.xml
+++ b/app/src/main/res/layout/activity_configure_game.xml
@@ -51,29 +51,34 @@
         android:layout_marginTop="92dp"
         android:layout_marginEnd="44dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/CleanNumberPicker"
+        />
 
     <NumberPicker
         android:id="@+id/number_time"
-        android:layout_width="57dp"
-        android:layout_height="47dp"
+        android:layout_width="59dp"
+        android:layout_height="43dp"
         android:layout_marginTop="68dp"
         app:layout_constraintBottom_toTopOf="@+id/number_digits"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.687"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/number_games"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        style="@style/CleanNumberPicker"
+        />
 
     <NumberPicker
         android:id="@+id/number_digits"
-        android:layout_width="58dp"
-        android:layout_height="46dp"
+        android:layout_width="59dp"
+        android:layout_height="43dp"
         android:layout_marginBottom="156dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.653"
         app:layout_constraintStart_toEndOf="@+id/textView3"
+        style="@style/CleanNumberPicker"
         />
 
     <Button
