--- a/app/src/main/res/layout/activity_configure_game.xml
+++ b/app/src/main/res/layout/activity_configure_game.xml
@@ -7,92 +7,73 @@
     tools:context=".gameFragments.ConfigureGameFragment">
 
 
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
+        android:layout_marginBottom="80dp"
         android:text="Number of Games"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toStartOf="@+id/number_games"
-        app:layout_constraintHorizontal_bias="0.101"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.538" />
+        app:layout_constraintEnd_toEndOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
+        android:layout_marginBottom="84dp"
         android:text="Time to Guess"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.441" />
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="8dp"
         android:text="Number of Digits"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.089" />
+        app:layout_constraintBottom_toBottomOf="@+id/number_digits"
+        app:layout_constraintEnd_toStartOf="@+id/number_digits" />
 
     <NumberPicker
         android:id="@+id/number_games"
+        style="@style/CleanNumberPicker"
         android:layout_width="59dp"
         android:layout_height="43dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="44dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        style="@style/CleanNumberPicker"
-        />
+        android:layout_marginBottom="56dp"
+        app:layout_constraintBottom_toTopOf="@+id/number_time"
+        app:layout_constraintEnd_toEndOf="@+id/number_time" />
 
     <NumberPicker
         android:id="@+id/number_time"
+        style="@style/CleanNumberPicker"
         android:layout_width="59dp"
         android:layout_height="43dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginBottom="56dp"
         app:layout_constraintBottom_toTopOf="@+id/number_digits"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.687"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/number_games"
-        app:layout_constraintVertical_bias="0.0"
-        style="@style/CleanNumberPicker"
-        />
+        app:layout_constraintEnd_toEndOf="@+id/number_digits" />
 
     <NumberPicker
         android:id="@+id/number_digits"
-        android:layout_width="59dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="156dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.653"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
         style="@style/CleanNumberPicker"
-        />
+        android:layout_width="59dp"
+        android:layout_height="46dp"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toTopOf="@+id/startGameButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.813"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/startGameButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="32dp"
         android:text="Start Game"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
