--- a/app/src/main/res/layout/activity_configure_game.xml
+++ b/app/src/main/res/layout/activity_configure_game.xml
@@ -11,8 +11,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="72dp"
         android:text="Number of Games"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/textView2" />
 
@@ -20,8 +21,9 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="84dp"
+        android:layout_marginBottom="72dp"
         android:text="Time to Guess"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="@+id/textView3" />
 
@@ -30,8 +32,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="60dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="12dp"
         android:text="Number of Digits"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/number_digits"
         app:layout_constraintEnd_toStartOf="@+id/number_digits" />
 
@@ -58,7 +61,7 @@
         style="@style/CleanNumberPicker"
         android:layout_width="59dp"
         android:layout_height="46dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="120dp"
         app:layout_constraintBottom_toTopOf="@+id/startGameButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.813"
@@ -66,11 +69,12 @@
 
     <Button
         android:id="@+id/startGameButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="80dp"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="32dp"
         android:text="Start Game"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
